fixed image height so fixed image is visible

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ html, body {
 figure {
   position: relative;
   width: 100%;
-  height: 60%;
+  height: 500px;
   margin: 0!important;
 }
 .fixed-wrap {
